2004-01-26 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b7

	* Bugfix: Changing album permissions who can view comments were broken.

	* Bugfix: When embedded in phpBB2, Permissions for "only logged in" users were broken.
		  Because phpBB2's anonymous user is also logged in. So we have to ignore this.

2004-01-26  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b6

	* Removed Add Photos from the admin menu
	* Changed Add Photo to a tab-based window
	* If GR Applet JARs are present, added two upload tabs: GR Applet Mini and
	  GR Applet
	* Replaced slideshow.php with an Applet-based version. The old slideshow is
	  in slideshow_high.php.
	* The applets are self-signed, you have to trust me in order to run them.
	  This doesn't work on Safari for some reason, so the applet fails on Mac.

	I expect these changes to break some stuff, and I'll be grateful for help
	fixing. Also, plese pipe up with suggestions!

2004-01-26 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b5

	* New: Added Martin Smallridge to AUTHORS and give him credits for his phpBB Code.

2004-01-24  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b4

	* Fixed remote security exploit in init.php and setup/init.php where
	  one extract() call can be used to overwrite the input for a
	  subsequent extract() call letting users overwrite GALLERY_BASEDIR

2004-01-23 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b3

	* New: added contrib folder with subfolder phpBB2 with documentation
	       and files for phpBB2.

	* New: Added g1-icon.gif

	* Bugfix: When not embedded and mod_rewrite was on, makeGalleryUrl was broken.

	* New: lib folder.

	* Change: extracted all language related functions from util.php
		  into lib/lang.php and include them in util.php.

2004-01-23 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b2

        * New: implemented Code for Gallery phpBB2 integration.

	  - Gallery is now ready to be integrated in phpBB2 (2.0.6), but unfortunately