@@ -32,65 +32,19 @@ $versions['AUTHORS']='1.17';
 $versions['LICENSE.txt']='1.2';
 $versions['README']='1.28';
 $versions['Version.php']='1.580';
+$versions['add_admin.inc']='1.1';
+$versions['add_applet.inc']='1.1';
+$versions['add_applet_mini.inc']='1.1';
 $versions['add_comment.php']='1.29';
+$versions['add_form.inc']='1.1';
+$versions['add_form_one.inc']='1.1';
+$versions['add_other.inc']='1.1';
 $versions['add_photos.php']='1.50';
+$versions['add_url.inc']='1.1';
 $versions['adv_search.php']='1.8';
 $versions['album_permissions.php']='1.35';
 $versions['albums.php']='1.118';
 $versions['captionator.php']='1.38';
-$versions['configure.bat']='1.2';
-$versions['configure.sh']='1.4';
-$versions['copy_photo.php']='1.3';
-$versions['create_user.php']='1.30';
-$versions['delete_album.php']='1.27';
-$versions['delete_photo.php']='1.40';
-$versions['delete_user.php']='1.24';
-$versions['do_command.php']='1.50';
-$versions['edit_appearance.php']='1.69';
-$versions['edit_caption.php']='1.43';
-$versions['edit_field.php']='1.32';
-$versions['edit_thumb.php']='1.25';
-$versions['extra_fields.php']='1.14';
-$versions['gallery_remote.php']='1.18';
-$versions['gallery_remote2.php']='1.50';
-$versions['index.php']='1.35';
-$versions['init.php']='1.77';
-$versions['login.php']='1.38';
-$versions['manage_users.php']='1.26';
-$versions['modify_user.php']='1.28';
-$versions['move_album.php']='1.38';
-$versions['move_photo.php']='1.65';
-$versions['multi_create_user.php']='1.6';
-$versions['new_password.php']='1.4';
-$versions['nls.php']='1.37';
-$versions['photo_owner.php']='1.13';
-$versions['poll_properties.php']='1.9';
-$versions['poll_results.php']='1.10';
-$versions['progress_uploading.php']='1.25';
-$versions['publish_xp.php']='1.24';
-$versions['publish_xp_docs.php']='1.16';
-$versions['register.php']='1.6';
-$versions['rename_album.php']='1.38';
-$versions['reset_votes.php']='1.6';
-$versions['resize_photo.php']='1.40';
-$versions['rotate_photo.php']='1.37';
-$versions['save_photos.php']='1.80';
-$versions['search.php']='1.47';
-$versions['secure.bat']='1.2';
-$versions['secure.sh']='1.5';
-$versions['session.php']='1.26';
-$versions['slideshow.php']='1.48';
-$versions['slideshow_high.php']='1.1';
-$versions['slideshow_low.php']='1.35';
-$versions['sort_album.php']='1.23';
-$versions['upgrade_album.php']='1.23';
-$versions['upgrade_users.php']='1.7';
-$versions['user_preferences.php']='1.29';
-$versions['util.php']='1.296';
-$versions['view_album.php']='1.187';
-$versions['view_comments.php']='1.22';
-$versions['view_photo.php']='1.156';
-$versions['view_photo_properties.php']='1.33';
 $versions['classes/Album.php']='1.144';
 $versions['classes/AlbumDB.php']='1.27';
 $versions['classes/AlbumItem.php']='1.61';
@@ -113,18 +67,39 @@ $versions['classes/postnuke/UserDB.php']='1.8';
 $versions['classes/postnuke0.7.1/User.php']='1.5';
 $versions['classes/postnuke0.7.1/UserDB.php']='1.4';
 $versions['classes/remote/GalleryRemoteProperties.php']='1.4';
+$versions['configure.bat']='1.2';
+$versions['configure.sh']='1.4';
+$versions['copy_photo.php']='1.3';
+$versions['create_user.php']='1.30';
 $versions['css/config.css.default']='1.12';
 $versions['css/embedded_style.css.default']='1.4';
 $versions['css/standalone_style.css.default']='1.6';
+$versions['delete_album.php']='1.27';
+$versions['delete_photo.php']='1.40';
+$versions['delete_user.php']='1.24';
+$versions['do_command.php']='1.50';
+$versions['docs/html.css']='1.2';
+$versions['edit_appearance.php']='1.69';
+$versions['edit_caption.php']='1.43';
+$versions['edit_field.php']='1.32';
+$versions['edit_thumb.php']='1.25';
 $versions['errors/configmode.php']='1.20';
 $versions['errors/configure_help.php']='1.7';
 $versions['errors/configure_instructions.php']='1.12';
 $versions['errors/reconfigure.php']='1.18';
 $versions['errors/unconfigured.php']='1.18';
+$versions['extra_fields.php']='1.14';
+$versions['gallery_remote.php']='1.18';
+$versions['gallery_remote2.php']='1.50';
 $versions['html/errorRow.inc']='1.6';
 $versions['html/userData.inc']='1.17';
 $versions['html_wrap/album.footer.default']='1.26';
 $versions['html_wrap/album.header.default']='1.16';
+$versions['html_wrap/frames/README.php']='1.6';
+$versions['html_wrap/frames/polaroid/frame.def']='1.7';
+$versions['html_wrap/frames/polaroids/frame.def']='1.6';
+$versions['html_wrap/frames/shadows/frame.def']='1.8';
+$versions['html_wrap/frames/simple_book/frame.def']='1.6';
 $versions['html_wrap/gallery.footer.default']='1.32';
 $versions['html_wrap/gallery.header.default']='1.14';
 $versions['html_wrap/inline_albumthumb.footer.default']='1.8';
@@ -145,11 +120,8 @@ $versions['html_wrap/slideshow.footer.default']='1.13';
 $versions['html_wrap/slideshow.header.default']='1.9';
 $versions['html_wrap/wrapper.footer.default']='1.9';
 $versions['html_wrap/wrapper.header.default']='1.15';
-$versions['html_wrap/frames/README.php']='1.6';
-$versions['html_wrap/frames/polaroid/frame.def']='1.7';
-$versions['html_wrap/frames/polaroids/frame.def']='1.6';
-$versions['html_wrap/frames/shadows/frame.def']='1.8';
-$versions['html_wrap/frames/simple_book/frame.def']='1.6';
+$versions['index.php']='1.35';
+$versions['init.php']='1.77';
 $versions['js/client_sniff.js']='1.2';
 $versions['layout/adminbox.inc']='1.15';
 $versions['layout/breadcrumb.inc']='1.17';
@@ -164,8 +136,35 @@ $versions['layout/navtablebegin.inc']='1.1';
 $versions['layout/navtableend.inc']='1.1';
 $versions['layout/navtablemiddle.inc']='1.1';
 $versions['layout/searchdraw.inc']='1.15';
+$versions['lib/lang.php']='1.1';
+$versions['login.php']='1.38';
+$versions['manage_users.php']='1.26';
+$versions['manifest.inc']='1.5';
+$versions['modify_user.php']='1.28';
+$versions['move_album.php']='1.38';
+$versions['move_photo.php']='1.65';
+$versions['multi_create_user.php']='1.6';
+$versions['new_password.php']='1.4';
+$versions['nls.php']='1.37';
+$versions['photo_owner.php']='1.13';
 $versions['platform/fs_unix.php']='1.19';
 $versions['platform/fs_win32.php']='1.20';
+$versions['poll_properties.php']='1.9';
+$versions['poll_results.php']='1.10';
+$versions['progress_uploading.php']='1.25';
+$versions['publish_xp.php']='1.24';
+$versions['publish_xp_docs.php']='1.16';
+$versions['register.php']='1.6';
+$versions['rename_album.php']='1.38';
+$versions['reset_votes.php']='1.6';
+$versions['resize_photo.php']='1.40';
+$versions['rotate_photo.php']='1.37';
+$versions['save_photos.php']='1.80';
+$versions['search.php']='1.47';
+$versions['secure.bat']='1.2';
+$versions['secure.sh']='1.5';
+$versions['session.php']='1.26';
+$versions['setup/.htaccess']='1.16';
 $versions['setup/backup_albums.php']='1.14';
 $versions['setup/check.inc']='1.33';
 $versions['setup/check_imagemagick.php']='1.19';
@@ -178,6 +177,7 @@ $versions['setup/constants.inc']='1.30';
 $versions['setup/defaults.inc']='1.21';
 $versions['setup/diagnostics.php']='1.18';
 $versions['setup/functions.inc']='1.153';
+$versions['setup/ghcc.php']='1.2';
 $versions['setup/gpl.txt']='1.5';
 $versions['setup/index.php']='1.40';
 $versions['setup/init.php']='1.36';
@@ -187,4 +187,16 @@ $versions['setup/php_value_ok.php']='1.5';
 $versions['setup/phpinfo.php']='1.5';
 $versions['setup/session_test.php']='1.20';
 $versions['setup/write.inc']='1.48';
+$versions['slideshow.php']='1.48';
+$versions['slideshow_high.php']='1.1';
+$versions['slideshow_low.php']='1.35';
+$versions['sort_album.php']='1.23';
+$versions['upgrade_album.php']='1.23';
+$versions['upgrade_users.php']='1.7';
+$versions['user_preferences.php']='1.29';
+$versions['util.php']='1.296';
+$versions['view_album.php']='1.187';
+$versions['view_comments.php']='1.22';
+$versions['view_photo.php']='1.156';
+$versions['view_photo_properties.php']='1.33';
 ?>
