@@ -1,3 +1,9 @@
+2004-01-26  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b8
+
+	* Overhauled the build_manifest script so that it reads the CVS Entries
+	  file to find appropriate files to check for version ids.  This way we
+	  don't have to maintain a file list (which is error prone).
+
 2004-01-26 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b7
 
 	* Bugfix: Changing album permissions who can view comments were broken.
